# Adsorbase

./: .copier-answers.yml  .gitignore  LICENSE  README.md  adsorbents.csv  app.py  env.yml  example.py  pyproject.toml  report.ipynb  styles.py  todo.txt  tox.ini
.github/workflows/: test.yaml
data/: README.md
docs/source/: conf.py
docs/source/api/: adsorbase.rst  modules.rst
notebooks/: README.md  report.ipynb
src/adsorbase/: __init__.py  app.py  callbacks.py  layout.py  run.py  utils.py
src/adsorbase/data/: README.md  adsorbents.csv
tests/: test_example_module.py
