[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adsorbase"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Asorbent data visualiser"
dependencies = [
    "dash>=3.0",
    "dash_bootstrap_components",
    "dash_bootstrap_templates",
    "plotly",
    "pandas",
    "numpy"
]
authors = [
    {name = "Arsenijs Danilko", email = "arsenijs.danilko@epfl.ch"},
    {name = "Aurèle Dubois", email = "aurele.dubois@epfl.ch"},
    {name = "Jérémy Demierre", email = "jeremy.demierre@epfl.ch"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/ArsenijsDanilko/Adsorbase"
tracker = "https://github.com/ArsenijsDanilko/Adsorbase/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/adsorbase/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
